changed webhook configuration

--- a/backend/src/AudioTextR.Sample.TelegramBot/appsettings.json
+++ b/backend/src/AudioTextR.Sample.TelegramBot/appsettings.json
@@ -10,6 +10,7 @@
     "Token": "4UUIDDVP77PN2WR6P2AMQ2H43V7YHXTR"
   },
   "TelegramApi": {
-    "Token": "907186419:AAHQrTqp3uN9Dpz_IjZbiDleWpDFDyX9re4"
+    "Token": "907186419:AAHQrTqp3uN9Dpz_IjZbiDleWpDFDyX9re4",
+    "WebHook": "https://audiotextr.herokuapp.com/"
   }
 }
