--- a/backend/src/AudioTextR.Sample.TelegramBot/AudioTextR.Sample.TelegramBot.csproj
+++ b/backend/src/AudioTextR.Sample.TelegramBot/AudioTextR.Sample.TelegramBot.csproj
@@ -20,4 +20,10 @@
     <ProjectReference Include="..\AudioTextR.Core\AudioTextR.Core.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Content Update="appsettings.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
+
 </Project>
