--- a/backend/src/AudioTextR.Sample.TelegramBot/appsettings.json
+++ b/backend/src/AudioTextR.Sample.TelegramBot/appsettings.json
@@ -6,7 +6,7 @@
   },
   "AllowedHosts": "*",
   "WitAi": {
-    "BaseAdress": "https://api.wit.ai/",
+    "BaseAddress": "https://api.wit.ai/",
     "Token": "4UUIDDVP77PN2WR6P2AMQ2H43V7YHXTR"
   },
   "TelegramApi": {
