--- a/backend/src/AudioTextR.Sample.TelegramBot/AudioTextR.Sample.TelegramBot.csproj
+++ b/backend/src/AudioTextR.Sample.TelegramBot/AudioTextR.Sample.TelegramBot.csproj
@@ -8,6 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="HttpToSocks5Proxy" Version="1.4.0" />
     <PackageReference Include="Microsoft.AspNetCore.App" />
     <PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="2.2.0" PrivateAssets="All" />
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.7.12" />
