--- a/backend/src/AudioTextR.Utils/AudioTextR.Utils.csproj
+++ b/backend/src/AudioTextR.Utils/AudioTextR.Utils.csproj
@@ -4,4 +4,9 @@
     <TargetFramework>netstandard2.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="NVorbis" Version="0.8.6" />
+    <PackageReference Include="NVorbis.NAudioSupport" Version="0.5.6.1" />
+  </ItemGroup>
+
 </Project>
