--- a/.gitignore
+++ b/.gitignore
@@ -32,6 +32,9 @@ Project_Readme.html
 # User-specific files (MonoDevelop/Xamarin Studio)
 *.userprefs
 
+*.ide-wal
+.suo
+
 # Build results
 [Dd]ebug/
 [Dd]ebugPublic/
