deleted data from config

--- a/backend/src/AudioTextR.Sample.ConsoleTelegramBot/appsettings.json
+++ b/backend/src/AudioTextR.Sample.ConsoleTelegramBot/appsettings.json
@@ -7,14 +7,14 @@
   "AllowedHosts": "*",
   "WitAi": {
     "BaseAddress": "https://api.wit.ai/",
-    "Token": "4UUIDDVP77PN2WR6P2AMQ2H43V7YHXTR"
+    "Token": "token"
   },
   "TelegramApi": {
-    "Token": "907186419:AAHQrTqp3uN9Dpz_IjZbiDleWpDFDyX9re4",
+    "Token": "token",
     "WebHook": "https://audiotextr.herokuapp.com/"
   },
   "Proxy": {
-    "Server": "212.109.223.75",
-    "Port": "8083"
+    "Server": "server",
+    "Port": "0000"
   }
 }
